[tool.poetry]
name = "live_game"
version = "0.1.0"
description = ""
authors = ["Murat Kamaletdinov <kamaletdinov2425@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
